--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,21 +21,21 @@
   align-items: center;
 }
 
-.footer a {
+.footer div {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
 }
 
-.title a {
+.title div {
   color: #0070f3;
   text-decoration: none;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
+.title div:hover,
+.title div:focus,
+.title div:active {
   text-decoration: underline;
 }
 
@@ -66,10 +66,10 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
+  grid-gap: 2rem;
   max-width: 800px;
 }
 
